--- a/smb.conf
+++ b/smb.conf
@@ -1,24 +1,44 @@
 [global]
-	workgroup = SAMBA
-	security = user
 
-	passdb backend = tdbsam
-	fruit:aapl = yes
+wins support = yes
+workgroup = WORKGROUP
+netbios name = SAMBA
+vfs objects = acl_xattr fruit
+map acl inherit = yes
+store dos attributes = yes
+security = user
+valid users = @shareaccess
+username map = /etc/samba/users.map
 
-        min protocol = SMB2
+passdb backend = tdbsam:/etc/samba/passdb.tdb
+guest ok = no
+read only = no
 
-        ea support = yes
-        vfs objects = catia fruit streams_xattr
-        fruit:resource = file
-        fruit:metadata = netatalk
-        fruit:locking = none
-        fruit:encoding = native
-	mdns name = mdns
+# Time Machine
+durable handles = yes
+kernel oplocks = no
+kernel share modes = no
+posix locking = no
+fruit:advertise_fullsync = true
+smb2 leases = yes
 
-[timemachine]
-	path = /srv
-	browseable = Yes
-        vfs objects = catia fruit streams_xattr
-        read only = No
-        inherit acls = Yes
-	fruit:time machine = yes
+# Security
+
+
+client ipc max protocol = default
+client max protocol = default
+server max protocol = SMB3
+
+client ipc min protocol = default
+client min protocol = CORE
+server min protocol = SMB2
+
+
+[Time Capsule]
+
+path = /opt/Backups
+browseable = Yes
+vfs objects = catia fruit streams_xattr
+fruit:aapl = yes
+read only = No
+inherit acls = Yes
